Fix the size of the logo in the survey modal so it doesn't cause a visual jump when it loads.

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -253,6 +253,7 @@
 .maputnik-modal-survey__logo {
   display: block;
   margin: 0 auto;
+  height: 128px;
 }
 
 .maputnik-modal-survey__description {
